samples/_failures_safe/1761701862_b622ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41db2016.c: In function ‘main’:
./samples/SAFE/__tmp_41db2016.c:155:36: error: expected ‘)’ at end of input
  155 |                 if (matrix_multiply
      |                    ~               ^
      |                                    )
./samples/SAFE/__tmp_41db2016.c:155:17: error: expected declaration or statement at end of input
  155 |                 if (matrix_multiply
      |                 ^~
./samples/SAFE/__tmp_41db2016.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41db2016.c:155:17: error: expected declaration or statement at end of input
